  * Use "raise Exception(value)" syntax rather than the old-style "raise
    Exception, value".
  * Remove duplicate imports of os.path; 'import os' is enough.
  * Use Python 3 renamings of urllib, urllib2, and urlparse if available.
  * Remove all hard tabs from Python code.  Python 3 no longer tolerates
    mixing tabs and spaces for indentation.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100

update-manager (1:0.156.14.1) precise-proposed; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - add "LTS" to the version

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Apr 2012 13:59:24 +0200

update-manager (1:0.156.14) precise; urgency=low

  * debian/control:
    - fix description for update-manager-kde (LP: #984906),
      thanks to Scott Kitterman
  * DistUpgrade/DistUpgradeController.py:
    - do not set PYCENTRAL_NO_DPKG_QUERY (LP: #986233)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 20 Apr 2012 18:02:51 +0200

update-manager (1:0.156.13) precise; urgency=low

  * Improve the error message used when a package cannot be located after
    updating, probably caused by an overloaded mirror. (LP: #873468)

 -- Barry Warsaw <barry@ubuntu.com>  Tue, 17 Apr 2012 16:02:54 -0400

update-manager (1:0.156.12) precise; urgency=low

  [ Colin Watson ]
  * data/gtkbuilder/UpgradePromptDialog.ui:
    - Remove has_separator property from dialog_really_do_not_upgrade
      (deprecated in GTK+ 2.22, removed in 3.0).
  * debian/control:
    - Restore gksu dependency, needed by e.g. check-new-release-gtk
      (LP: #980637).
  
  [ Michael Vogt ]
  * UpdateManager/UpdateManager.py:
    - disconnect model and clear store before rebuilding the cache,
      thanks to Colin Watson
  * po/*.po:
    - updated to the latest launchpad (LP: #628157)
  * DistUpgrade/DistUpgradeController.py:
    - remove backports sources.list.d file again after its no
      longer needed (LP: #973717)
  * DistUpgrade/DistUpgradeController.py: