@@ -15,6 +15,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use Python 3 renamings of urllib, urllib2, and urlparse if available.
   * Remove all hard tabs from Python code.  Python 3 no longer tolerates
     mixing tabs and spaces for indentation.
+  * Use Python 3 renaming of httplib if available.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
